# mangaverse-service

./: Cargo.toml
src/: main.rs
src/db/: chapter.rs  genre.rs  manga.rs  mod.rs
src/mangadino/: entity.rs
src/manganelo/: entity.rs
src/readm/: entity.rs  mod.rs
