[package]
name = "mangaverse-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
scraper = "0.13.0"
isahc = "1.7.2"
anyhow = "1.0.65"
futures = "0.3.24"
mangaverse-entity = {git = "https://github.com/fa993/mangaverse-entity", rev = "426c47b"}
